--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "description": "",
   "dependencies": {
     "axios": "^1.7.4",
+    "cors": "^2.8.5",
     "ejs": "^3.1.10",
     "express": "^4.19.2"
   }
